# token-xray

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.claude/logs/: session-20260713-dcd4c3ca.md  session-20260714-dcd4c3ca.md
.github/workflows/: release.yml
src/token_xray/: __init__.py  cli.py  models.py
src/token_xray/analysis/: __init__.py  aggregates.py  duplication.py  normalize.py
src/token_xray/parsers/: __init__.py  _util.py  anthropic_csv.py  base.py  helicone.py  litellm_jsonl.py  openai_csv.py
src/token_xray/report/: __init__.py  html.py  json_export.py  terminal.py
tests/: conftest.py  test_aggregates.py  test_cli.py  test_duplication.py  test_fixture_hygiene.py  test_history_hygiene.py  test_json_privacy.py  test_models.py  test_no_network.py  test_normalize.py  test_parsers.py
tests/fixtures/: anthropic_console_sample.csv  anthropic_cost_real_schema.csv  anthropic_usage_real_schema.csv  helicone_sample.csv  litellm_proxy_sample.jsonl  openai_activity_real_schema.csv  openai_usage_sample.csv
