[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-xray"
version = "0.1.0"
description = "Local-first analyzer for LLM API spend exports. Zero network calls; aggregates only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anvay Sanil" }]
keywords = ["llm", "cost", "openai", "anthropic", "litellm", "helicone", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
# Heavy, optional. Semantic near-duplicate detection via local embeddings.
# The default near-duplicate path (stdlib bottom-k sketch) needs none of this.
embeddings = ["sentence-transformers>=2.2"]

[project.scripts]
token-xray = "token_xray.cli:app"

[project.urls]
Homepage = "https://github.com/Anvay-Sanil/token-xray"
Source = "https://github.com/Anvay-Sanil/token-xray"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/token_xray"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
